[chore] cloudbuild post - 스크립트 업데이트